chore: performance enhancements
- avoid new Boolean
- bulk method call instead of manual op